--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,9 +7,11 @@ header{
 
 }
 h1{
+    font-family: 'Open Sans', sans-serif;
     text-align: center;
 }
 h2{
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
 
@@ -24,7 +26,7 @@ nav ul{
 }
 nav li{
     color:rgb(53,8,80);
-
+    font-family: 'Montserrat', sans-serif;
     display: inline-block;
 }
 nav li a:visited{
@@ -32,9 +34,11 @@ nav li a:visited{
 }
 
 article{
+    font-family: 'Montserrat', sans-serif;
     background-color:#c9ada7 ;
 }
 h3{
+    font-family: 'Montserrat', sans-serif;
     text-align: center
 }
 #secondlist{
